@@ -54,6 +54,7 @@ sub rdatastr {
 		return join(' ', map { 
 			my $str = $_;  
 			$str =~ s/"/\\"/g;  
+			$str =~ s/;/\\;/g;  
 			qq("$str");
 		} @{$self->{'char_str_list'}});
 	} 
@@ -136,6 +137,8 @@ Use C<< $txt->rdatastr() >> or C<< $txt->char_str_list() >> instead.
 Returns a list of the individual <character-string> elements, 
 as unquoted strings.  Used by TXT->rdatastr and TXT->rr_rdata.
 
+NB: rdatastr will return quoted strings.
+
 
 =head1 FEATURES
 
@@ -158,6 +161,11 @@ would result in
 $TXTrr->char_str_list())[0] containing 'Test1 " ; more stuff'
 and
 $TXTrr->char_str_list())[1] containing 'Test2'
+
+Note that the rdatastr method (and therefore the print, and string
+method) returns the escaped format.
+
+
 
 
 =head1 COPYRIGHT
